// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With different size props Tables With Different Column Distance On Mobile 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c19 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c19,
.c19[type='button'],
.c19[type='reset'],
.c19[type='submit'] {
  -webkit-appearance: button;
}

.c19::-moz-focus-inner,
.c19[type='button']::-moz-focus-inner,
.c19[type='reset']::-moz-focus-inner,
.c19[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c19:-moz-focusring,
.c19[type='button']:-moz-focusring,
.c19[type='reset']:-moz-focusring,
.c19[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
}

.c16 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20:focus {
  outline: none;
}

.c18 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c14 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -20px;
    margin-right: -20px;
  }

  .c3 > * {
    padding-left: 20px;
    padding-right: 20px;
  }

  .c3 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Column Distance on mobile
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c13 c7 c14"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c15"
      role="row"
    >
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c18 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c15"
      role="row"
    >
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c18 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different size props Tables With Different Densities 1`] = `
.c3 {
  margin-bottom: 40px;
  background-color: transparent;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c5 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c19 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c19,
.c19[type='button'],
.c19[type='reset'],
.c19[type='submit'] {
  -webkit-appearance: button;
}

.c19::-moz-focus-inner,
.c19[type='button']::-moz-focus-inner,
.c19[type='reset']::-moz-focus-inner,
.c19[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c19:-moz-focusring,
.c19[type='button']:-moz-focusring,
.c19[type='reset']:-moz-focusring,
.c19[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  width: inherit;
}

.c13 {
  font-size: 14px;
  line-height: 20px;
}

.c17 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c26 {
  overflow: hidden;
  padding-top: 0px !important;
  padding-bottom: 0px;
}

.c28 {
  overflow: hidden;
  padding-top: 8px !important;
  padding-bottom: 8px;
}

.c20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20:focus {
  outline: none;
}

.c18 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c15 {
  display: none;
}

.c6 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c6 > *:first-child {
  padding-left: 0;
}

.c6 > *:nth-last-child(2) {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c16:hover {
  background: #F5F5F5;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:nth-last-child(2) {
  padding-right: 0;
}

.c7 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c9 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c25 {
  overflow: hidden;
  padding-top: 0px !important;
  padding-bottom: 0px;
}

.c27 {
  overflow: hidden;
  padding-top: 8px !important;
  padding-bottom: 8px;
}

.c4 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Densities
  </span>
   
  <span
    className="c2"
  >
    Default (Medium)
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 3
            </span>
          </div>
        </div>
        <div
          className="c14 c9 c15"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            />
          </div>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-3
            </span>
          </div>
        </div>
        <div
          className="c14 c17 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-3
            </span>
          </div>
        </div>
        <div
          className="c14 c17 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Small
    </span>
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c25"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c25"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c25"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 3
            </span>
          </div>
        </div>
        <div
          className="c14 c25 c15"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            />
          </div>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c26"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c26"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c26"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-3
            </span>
          </div>
        </div>
        <div
          className="c14 c26 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c26"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c26"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c26"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-3
            </span>
          </div>
        </div>
        <div
          className="c14 c26 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <span
      className="c2"
    >
      Medium
    </span>
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 3
            </span>
          </div>
        </div>
        <div
          className="c14 c9 c15"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            />
          </div>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 1-3
            </span>
          </div>
        </div>
        <div
          className="c14 c17 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c2 c13"
            >
              Cell 2-3
            </span>
          </div>
        </div>
        <div
          className="c14 c17 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c2"
  >
    Large
  </span>
  <div
    className="c4"
    role="table"
  >
    <div
      className="c5 c6 c7"
      role="row"
    >
      <div
        className="c8 c27"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12 c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c8 c27"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12 c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c8 c27"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12 c13"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c14 c27 c15"
        role="columnheader"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c12 c13"
          />
        </div>
      </div>
    </div>
    <div
      className="c5 c16"
      role="row"
    >
      <div
        className="c8 c28"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c2 c13"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c8 c28"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c2 c13"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c8 c28"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c2 c13"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c14 c28 c18 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c5 c16"
      role="row"
    >
      <div
        className="c8 c28"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c2 c13"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c8 c28"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c2 c13"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c8 c28"
        role="cell"
      >
        <div
          className="c10 c11"
        >
          <span
            className="c2 c13"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c14 c28 c18 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different size props Tables With Different Font Sizes 1`] = `
.c2 {
  margin-bottom: 40px;
  background-color: transparent;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c5 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c19 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c19,
.c19[type='button'],
.c19[type='reset'],
.c19[type='submit'] {
  -webkit-appearance: button;
}

.c19::-moz-focus-inner,
.c19[type='button']::-moz-focus-inner,
.c19[type='reset']::-moz-focus-inner,
.c19[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c19:-moz-focusring,
.c19[type='button']:-moz-focusring,
.c19[type='reset']:-moz-focusring,
.c19[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  width: inherit;
}

.c13 {
  font-size: 14px;
  line-height: 20px;
}

.c25 {
  font-size: 12px;
  line-height: 16px;
}

.c17 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20:focus {
  outline: none;
}

.c18 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c15 {
  display: none;
}

.c6 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c6 > *:first-child {
  padding-left: 0;
}

.c6 > *:nth-last-child(2) {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c16:hover {
  background: #F5F5F5;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:nth-last-child(2) {
  padding-right: 0;
}

.c7 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c9 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c4 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Font Sizes
  </span>
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Default (Medium)
      </span>
      <div
        className="c4"
        role="table"
      >
        <div
          className="c5 c6 c7"
          role="row"
        >
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c13"
              >
                Header 1
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c13"
              >
                Header 2
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c13"
              >
                Header 3
              </span>
            </div>
          </div>
          <div
            className="c14 c9 c15"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c13"
              />
            </div>
          </div>
        </div>
        <div
          className="c5 c16"
          role="row"
        >
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c13"
              >
                Cell 1-1
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c13"
              >
                Cell 1-2
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c13"
              >
                Cell 1-3
              </span>
            </div>
          </div>
          <div
            className="c14 c17 c18 c15"
            role="cell"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c22"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c23 c24"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          className="c5 c16"
          role="row"
        >
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c13"
              >
                Cell 2-1
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c13"
              >
                Cell 2-2
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c13"
              >
                Cell 2-3
              </span>
            </div>
          </div>
          <div
            className="c14 c17 c18 c15"
            role="cell"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c22"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c23 c24"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Small
      </span>
      <div
        className="c4"
        role="table"
      >
        <div
          className="c5 c6 c7"
          role="row"
        >
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c25"
              >
                Header 1
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c25"
              >
                Header 2
              </span>
            </div>
          </div>
          <div
            className="c8 c9"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c25"
              >
                Header 3
              </span>
            </div>
          </div>
          <div
            className="c14 c9 c15"
            role="columnheader"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c12 c25"
              />
            </div>
          </div>
        </div>
        <div
          className="c5 c16"
          role="row"
        >
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c25"
              >
                Cell 1-1
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c25"
              >
                Cell 1-2
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c25"
              >
                Cell 1-3
              </span>
            </div>
          </div>
          <div
            className="c14 c17 c18 c15"
            role="cell"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c22"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c23 c24"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          className="c5 c16"
          role="row"
        >
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c25"
              >
                Cell 2-1
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c25"
              >
                Cell 2-2
              </span>
            </div>
          </div>
          <div
            className="c8 c17"
            role="cell"
          >
            <div
              className="c10 c11"
            >
              <span
                className="c3 c25"
              >
                Cell 2-3
              </span>
            </div>
          </div>
          <div
            className="c14 c17 c18 c15"
            role="cell"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c22"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c19 c20"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c21"
              >
                <svg
                  aria-hidden="true"
                  className="c23 c24"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c3"
    >
      Medium
    </span>
    <div
      className="c4"
      role="table"
    >
      <div
        className="c5 c6 c7"
        role="row"
      >
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c8 c9"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            >
              Header 3
            </span>
          </div>
        </div>
        <div
          className="c14 c9 c15"
          role="columnheader"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c12 c13"
            />
          </div>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c3 c13"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c3 c13"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c3 c13"
            >
              Cell 1-3
            </span>
          </div>
        </div>
        <div
          className="c14 c17 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c5 c16"
        role="row"
      >
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c3 c13"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c3 c13"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c8 c17"
          role="cell"
        >
          <div
            className="c10 c11"
          >
            <span
              className="c3 c13"
            >
              Cell 2-3
            </span>
          </div>
        </div>
        <div
          className="c14 c17 c18 c15"
          role="cell"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c22"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c19 c20"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c21"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different size props Tables With Different Sizes In Mobile 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c26 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c18 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c18,
.c18[type='button'],
.c18[type='reset'],
.c18[type='submit'] {
  -webkit-appearance: button;
}

.c18::-moz-focus-inner,
.c18[type='button']::-moz-focus-inner,
.c18[type='reset']::-moz-focus-inner,
.c18[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c18:-moz-focusring,
.c18[type='button']:-moz-focusring,
.c18[type='reset']:-moz-focusring,
.c18[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  width: inherit;
}

.c12 {
  font-size: 14px;
  line-height: 20px;
}

.c16 {
  overflow: hidden;
  padding-top: 8px !important;
  padding-bottom: 8px;
}

.c19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c19:focus {
  outline: none;
}

.c17 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c14 {
  display: none;
}

.c5 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:nth-last-child(2) {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:nth-last-child(2) {
  padding-right: 0;
}

.c6 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c24 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c8 {
  overflow: hidden;
  padding-top: 8px !important;
  padding-bottom: 8px;
}

.c25 {
  overflow: hidden;
  padding-top: 8px !important;
  padding-bottom: 8px;
}

.c3 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:976px) {
  .c12 {
    font-size: 12px;
    line-height: 16px;
  }
}

@media (min-width:976px) {
  .c16 {
    padding-top: 0px !important;
    padding-bottom: 0px;
  }
}

@media (min-width:976px) {
  .c8 {
    padding-top: 0px !important;
    padding-bottom: 0px;
  }
}

@media (min-width:976px) {
  .c25 {
    padding-top: 0px !important;
    padding-bottom: 0px;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Sizes on mobile
  </span>
   
  <span
    className="c2"
  >
    Small density and font on desktop, large on mobile
  </span>
  <div
    className="c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11 c12"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11 c12"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11 c12"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c13 c8 c14"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11 c12"
          />
        </div>
      </div>
    </div>
    <div
      className="c4 c15"
      role="row"
    >
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c2 c12"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c2 c12"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c2 c12"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c17 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c18 c19"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c20"
          >
            <svg
              aria-hidden="true"
              className="c21"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c18 c19"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c20"
          >
            <svg
              aria-hidden="true"
              className="c22 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c4 c15"
      role="row"
    >
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c2 c12"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c2 c12"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c2 c12"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c17 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c18 c19"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c20"
          >
            <svg
              aria-hidden="true"
              className="c21"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c18 c19"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c20"
          >
            <svg
              aria-hidden="true"
              className="c22 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c4 c5 c24"
      role="row"
    >
      <div
        className="c7 c25"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c26 c12"
          >
            Footer 1
          </span>
        </div>
      </div>
      <div
        className="c7 c25"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c26 c12"
          >
            Footer 2
          </span>
        </div>
      </div>
      <div
        className="c7 c25"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c26 c12"
          >
            Footer 3
          </span>
        </div>
      </div>
      <div
        className="c13 c25 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c26 c12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
